Bugfix: 27 + 28 Top of expanded webcam view is behind fixed top navbar #27 Errors in Console when stream URL is empty #28

--- a/octoprint_uicustomizer/static/css/uicustomizer.css
+++ b/octoprint_uicustomizer/static/css/uicustomizer.css
@@ -662,7 +662,7 @@ body.UICResponsiveMode select{
     left: 50%;
     transform: translate(-50%, -50%);
     width: calc(100% - 200px);
-    z-index: 1000;
+    z-index: 1045;
     background: rgba(255,255,255,0.66);
     border: 2px  solid rgba(0,0,0,0.5);
     border-radius: 4px; padding: 8px;
